Thirty Third Commit

--- a/Notebook1.ipynb
+++ b/Notebook1.ipynb
@@ -236,6 +236,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.0"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train['sales'].min()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-23T17:52:49.248298700Z",
+     "start_time": "2023-09-23T17:52:49.238041800Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.0"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(train[train['family'] == 'DAIRY'])['sales'].min()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-23T17:55:58.049148600Z",
+     "start_time": "2023-09-23T17:55:57.919545600Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
