--- a/Notebook4.ipynb
+++ b/Notebook4.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-09-24T11:12:41.414889300Z",
-     "start_time": "2023-09-24T11:12:41.388237500Z"
+     "end_time": "2023-09-24T12:02:57.138333500Z",
+     "start_time": "2023-09-24T12:02:57.079468Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "   sales  pred_sales\n0    3.0         NaN\n1   10.0         NaN\n2    6.0         NaN\n3    3.0         NaN\n4    9.0         NaN",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sales</th>\n      <th>pred_sales</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>10.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>6.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>9.0</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "   sales  pred_sales\n0    8.0    4.270333\n1    5.0    4.507346\n2    4.0    4.307285\n3    3.0    4.286661\n4    8.0    4.298946",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sales</th>\n      <th>pred_sales</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>8.0</td>\n      <td>4.270333</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5.0</td>\n      <td>4.507346</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4.0</td>\n      <td>4.307285</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3.0</td>\n      <td>4.286661</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>8.0</td>\n      <td>4.298946</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,12 +24,40 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "a1_v = pd.read_csv('a1_v.csv')\n",
+    "a2_v = pd.read_csv('a2_v.csv')\n",
     "a3_v = pd.read_csv('a3_v.csv')\n",
     "\n",
-    "a3_v = a3_v[['sales', 'pred_sales']]\n",
+    "df = pd.concat([a1_v, a2_v, a3_v], axis=0)\n",
     "\n",
-    "a3_v.head()"
+    "df = df[['sales', 'pred_sales']]\n",
+    "\n",
+    "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(28512, 2)"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-24T12:06:44.389537700Z",
+     "start_time": "2023-09-24T12:06:44.389537700Z"
+    }
+   }
   },
   {
    "cell_type": "code",
